Replace pinchflat with metube

--- a/files/media_server/usr/share/www/dashboard/index.html
+++ b/files/media_server/usr/share/www/dashboard/index.html
@@ -151,8 +151,8 @@
                         fill="currentColor"
                     ></path>
                 </svg>
-                <h2 class="card-title">PinchFlat</h2>
-                <p class="card-description">Sťahovanie videí</p>
+                <h2 class="card-title">Metube</h2>
+                <p class="card-description">Sťahovanie videí z Youtube atď</p>
                 <a href="http://yt-down.home" class="card-button">Otvoriť</a>
             </div>
         </div>
