--- a/files/media_server/usr/share/www/dashboard/index.html
+++ b/files/media_server/usr/share/www/dashboard/index.html
@@ -9,7 +9,7 @@
                 --background-color: #121212;
                 --card-background-color: #1e1e1e;
                 --text-color: #e0e0e0;
-                --primary-color: #bb86fc;
+                --primary-color: #659157;
                 --button-text-color: #121212;
                 --card-border-color: #2a2a2a;
                 --card-shadow-color: rgba(0, 0, 0, 0.2);
@@ -84,7 +84,7 @@
                 transition: background-color 0.2s ease;
             }
             .card-button:hover {
-                background-color: #a765f1;
+                background-color: #659157;
             }
         </style>
     </head>
