--- a/files/media_server/usr/share/www/dashboard/index.html
+++ b/files/media_server/usr/share/www/dashboard/index.html
@@ -155,6 +155,43 @@
                 <p class="card-description">Sťahovanie videí z Youtube atď</p>
                 <a href="http://yt-down.home" class="card-button">Otvoriť</a>
             </div>
+            <div class="card">
+                <svg
+                    class="card-icon"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
+                        fill="currentColor"
+                    ></path>
+                </svg>
+                <h2 class="card-title">fsqd</h2>
+                <p class="card-description">
+                    Sťahovanie súborov z fastshare.cloud
+                </p>
+                <a href="http://downloads.home" class="card-button">Otvoriť</a>
+            </div>
+            <div class="card">
+                <svg
+                    class="card-icon"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M10 4H4c-1.11 0-2 .9-2 2v12a2 2 0 002 2h16a2 2 0 002-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
+                        fill="currentColor"
+                    ></path>
+                </svg>
+                <h2 class="card-title">Samba</h2>
+                <p class="card-description">
+                    Zdieľanie súborov v lokálnej sieti<br />
+                    User: samba<br />
+                    Pass: samba
+                </p>
+            </div>
         </div>
     </body>
 </html>
