--- a/files/media_server/usr/share/www/dashboard/index.html
+++ b/files/media_server/usr/share/www/dashboard/index.html
@@ -181,6 +181,22 @@
                     xmlns="http://www.w3.org/2000/svg"
                 >
                     <path
+                        d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
+                        fill="currentColor"
+                    ></path>
+                </svg>
+                <h2 class="card-title">qBittorrent</h2>
+                <p class="card-description">Sťahovanie torrentov</p>
+                <a href="http://torrents.home" class="card-button">Otvoriť</a>
+            </div>
+            <div class="card">
+                <svg
+                    class="card-icon"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
                         d="M10 4H4c-1.11 0-2 .9-2 2v12a2 2 0 002 2h16a2 2 0 002-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                         fill="currentColor"
                     ></path>
