Add Sonarr and Radarr services to media server setup

--- a/files/media_server/usr/share/www/dashboard/index.html
+++ b/files/media_server/usr/share/www/dashboard/index.html
@@ -171,7 +171,7 @@
                 <p class="card-description">
                     Sťahovanie súborov z fastshare.cloud
                 </p>
-                <a href="http://downloads.home" class="card-button">Otvoriť</a>
+                <a href="http://downloads.home/" class="card-button">Otvoriť</a>
             </div>
             <div class="card">
                 <svg
@@ -187,7 +187,7 @@
                 </svg>
                 <h2 class="card-title">qBittorrent</h2>
                 <p class="card-description">Sťahovanie torrentov</p>
-                <a href="http://torrents.home" class="card-button">Otvoriť</a>
+                <a href="http://torrents.home/" class="card-button">Otvoriť</a>
             </div>
             <div class="card">
                 <svg
@@ -223,6 +223,38 @@
                 <h2 class="card-title">Audiobookshelf</h2>
                 <p class="card-description">Streamujte svoje audioknihy</p>
                 <a href="http://audiobooks.home" class="card-button">Otvoriť</a>
+            </div>
+            <div class="card">
+                <svg
+                    class="card-icon"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
+                        fill="currentColor"
+                    ></path>
+                </svg>
+                <h2 class="card-title">Sonarr</h2>
+                <p class="card-description">Správa TV seriálov</p>
+                <a href="http://sonarr.home" class="card-button">Otvoriť</a>
+            </div>
+            <div class="card">
+                <svg
+                    class="card-icon"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
+                        fill="currentColor"
+                    ></path>
+                </svg>
+                <h2 class="card-title">Radarr</h2>
+                <p class="card-description">Správa filmov</p>
+                <a href="http://radarr.home" class="card-button">Otvoriť</a>
             </div>
         </div>
     </body>
